--- a/style.css
+++ b/style.css
@@ -121,4 +121,13 @@ body {
 h1, h2 {
   color: #2c3e50;
 }
+.navbar {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 999;
+}
+body {
+  padding-top: 70px; /* Space for the fixed navbar */
+}
 
