--- a/style.css
+++ b/style.css
@@ -74,9 +74,10 @@ body {
 .nav-links a {
   color: white;
   text-decoration: none;
-  font-size: 15px;
+  font-size: 16px;
   padding: 6px 10px;
   border-radius: 5px;
+  white-space: norwrap;
 }
 
 .nav-links a:hover {
