--- a/style.css
+++ b/style.css
@@ -1,11 +1,13 @@
-.Video{
-  width: 500px;
+.video-galerie {
+  width: 200px;
   height: auto;
-  border-radius: 12px;
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+  margin: 10px;
+  border-radius: 8px;
+  display: inline-block;
+  vertical-align: top;
 }
 
-
+    
 #galerie-photos {
   scroll-margin-top: 90px; /* hauteur de la navbar */
 }
